# Robot-Descriptions

./: .gitignore  LICENSE  README.md  pyproject.toml
robot_descriptions/: __init__.py  loader.py
robot_descriptions/piano/: consts.py  generate_piano_mjcf.py  generate_piano_urdf.py
robot_descriptions/workflow/: convert_urdf_to_mjcf.py  export_onshape_to_urdf.py  onshape_to_urdf.py
robots/lite/urdf/: joint_properties.json
robots/lite_dummy/meshes/: chest_visual.stl  head_visual.stl  left_hand_visual.stl  left_shoulder_pitch_visual.stl  left_shoulder_yaw_visual.stl  left_wrist_roll_visual.stl  left_wrist_yaw_visual.stl  neck_roll_visual.stl  neck_yaw_visual.stl  right_hand_visual.stl  right_shoulder_roll_visual.stl  right_wrist_roll_visual.stl  right_wrist_yaw_visual.stl
robots/lite_dummy/mjcf/: lite.xml
robots/lite_dummy/urdf/: config.json  joint_properties.json  lite.urdf
robots/lite_piano/meshes/: head_visual.stl  left_hand_visual.stl  left_shoulder_pitch_visual.stl  left_wrist_roll_visual.stl  neck_yaw_visual.stl  right_hand_visual.stl  right_shoulder_pitch_visual.stl  right_wrist_roll_visual.stl
robots/lite_piano/mjcf/: lite.xml
robots/lite_piano/urdf/: config.json  lite.urdf
robots/miku/urdf/: joint_properties.json
robots/piano/mjcf/: piano_dep20.xml  piano_nikomaku.xml
robots/piano/urdf/: piano_dep20.urdf  (+1 more)
scripts/: convert_urdf_to_mjcf.py  export_onshape_to_urdf.py
scripts/piano/: consts.py  generate_piano_mjcf.py  generate_piano_urdf.py
tests/: conftest.py  test_mesh.py  test_parity.py  test_plausibility.py  test_symmetry.py
