[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-descriptions"
version = "0.2.0"
description = "Robot descriptions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.4.0",
    "onshape-to-robot>=1.8.0",
    "pymeshlab>=2025.7.post1",
]

[project.scripts]
robot-descriptions-export-onshape-to-urdf = "robot_descriptions.workflow.export_onshape_to_urdf:main"
robot-descriptions-convert-urdf-to-mjcf = "robot_descriptions.workflow.convert_urdf_to_mjcf:main"

[tool.hatch.build.targets.wheel]
packages = ["robot_descriptions"]

[tool.hatch.build.targets.sdist]
include = [
    "/robot_descriptions",
    "/README.md",
    "/pyproject.toml",
]
